<resources>
    <string name="app_name">MVP学习</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_first_name">姓</string>
    <string name="tv_last_name">名</string>
    <string name="et_first_name">请输入姓</string>
    <string name="et_last_name">请输入名</string>
    <string name="btn_save">保存</string>
</resources>
